byte-code-compiler/test_files/typing/bad/testfile-redef-2.psc

int_32 main() {}
int_32 main() {}
